--- a/demo-micro-service/pom.xml
+++ b/demo-micro-service/pom.xml
@@ -28,6 +28,12 @@
             <version>5.1.38</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+
     </dependencies>
 
 
