--- a/demo-application/src/main/resources/application.properties
+++ b/demo-application/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.application.name=demo-application-service
+spring.application.name=demo-application
 security.basic.enabled=false
+feign.hystrix.enabled=false
 
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
