--- a/demo-micro-service/src/main/resources/application-dev.properties
+++ b/demo-micro-service/src/main/resources/application-dev.properties
@@ -3,6 +3,8 @@ server.port=8085
 spring.application.name=demo-application-service
 security.basic.enabled=false
 
+spring.swagger.bus.enabled=true
+
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.client.serviceUrl.defaultZone=http://localhost:1511/eureka/
