--- a/demo-micro-service/src/main/resources/application.properties
+++ b/demo-micro-service/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=demo-application-service
 security.basic.enabled=false
 
+spring.swagger.bus.enabled=true
+
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
