--- a/demo-application/src/main/resources/application.properties
+++ b/demo-application/src/main/resources/application.properties
@@ -6,6 +6,8 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
 #dialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+log4j.appender.stdout.Target=System.out
