--- a/demo-application/pom.xml
+++ b/demo-application/pom.xml
@@ -23,11 +23,16 @@
         </dependency>
 
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.38</version>
+            <groupId>com.cloudfoundry.connector</groupId>
+            <artifactId>oracle-connector</artifactId>
+            <version>0.1.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>ojdbc14</artifactId>
+            <version>10.2.0.4.0</version>
+        </dependency>
     </dependencies>
 
     <build>
