--- a/demo-application/src/main/resources/application-dev.properties
+++ b/demo-application/src/main/resources/application-dev.properties
@@ -8,15 +8,27 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.client.serviceUrl.defaultZone=http://localhost:1511/eureka/
 
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/nrapdemo
-spring.datasource.username=root
-spring.datasource.password=123456
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/nrapdemo
+#spring.datasource.username=root
+#spring.datasource.password=123456
+#
+##dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
-#dialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+##database
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@(DESCRIPTION =(ADDRESS = (PROTOCOL = TCP)(HOST = 192.168.105.72)(PORT = 1521))(CONNECT_DATA = (SERVER = DEDICATED)(SERVICE_NAME = orcl11g.us.oracle.com)))
+spring.datasource.username=system
+spring.datasource.password=oracle
+
+##dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
+
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+log4j.appender.stdout.Target=System.out
 
 clientInfo.clientId=hiauwfhfi2398
 clientInfo.clientKey=dfna8302n;fe;g-4208[qf
