--- a/demo-micro-service/pom.xml
+++ b/demo-micro-service/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.rayfay.example</groupId>
-    <artifactId>demo</artifactId>
+    <artifactId>demo-micro-service</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <parent>
