--- a/demo-manager/manifest.yml
+++ b/demo-manager/manifest.yml
@@ -2,7 +2,7 @@
 applications:
 - name: demo-management
   memory: 1024M
-path: target/demo-1.0-SNAPSHOT.jar
+path: target/demo-manager-1.0-SNAPSHOT.jar
 buildpack: java_buildpack
 #routes:
 #  - route:  oper-mgr2.apps.cftest.net
