--- a/demo-manager/pom.xml
+++ b/demo-manager/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.rayfay.bizcloud</groupId>
-    <artifactId>demo</artifactId>
+    <artifactId>demo-manager</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>demo</name>
+    <name>demo-manager</name>
     <description>demo-framework</description>
     <parent>
         <groupId>com.rayfay.bizcloud</groupId>
