配置文件更新

--- a/demo-manager/src/main/resources/application-dev.properties
+++ b/demo-manager/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 #spring.data.mongodb.uri=mongodb://localhost:27017/test
-spring.application.name=oper-management
+spring.application.name=demo-management
 ribbon.IsSecure=false
 feign.hystrix.enabled=false
 security.basic.enabled=false
