--- a/demo-manager/manifest.yml
+++ b/demo-manager/manifest.yml
@@ -6,6 +6,9 @@ path: target/demo-manager-1.0-SNAPSHOT.jar
 buildpack: java_buildpack
 #routes:
 #  - route:  oper-mgr2.apps.cftest.net
+services:
+- nrap_bus_mq
+- eureka-for-int
 env:
     CF_TARGET: https://api.system.cftest.net
 #    JAVA_OPTS: -agentlib:jdwp=transport=dt_socket,server=n,address=192.168.120.134:16000,suspend=y
