--- a/demo-application/src/main/resources/application-dev.properties
+++ b/demo-application/src/main/resources/application-dev.properties
@@ -19,8 +19,10 @@ eureka.client.serviceUrl.defaultZone=http://localhost:1511/eureka/
 ##database
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@(DESCRIPTION =(ADDRESS = (PROTOCOL = TCP)(HOST = 192.168.105.72)(PORT = 1521))(CONNECT_DATA = (SERVER = DEDICATED)(SERVICE_NAME = orcl11g.us.oracle.com)))
-spring.datasource.username=system
-spring.datasource.password=oracle
+spring.datasource.username=USR_TEST
+spring.datasource.password=test123
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
