--- a/demo-manager/manifest.yml
+++ b/demo-manager/manifest.yml
@@ -10,4 +10,6 @@ env:
     CF_TARGET: https://api.system.cftest.net
 #    JAVA_OPTS: -agentlib:jdwp=transport=dt_socket,server=n,address=192.168.120.134:16000,suspend=y
 #    -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=16000
-
+services:
+- nrap_bus_mq
+- eureka-for-int
