--- a/demo-micro-service/manifest.yml
+++ b/demo-micro-service/manifest.yml
@@ -2,15 +2,13 @@
 applications:
 - name: demo-application-service
   memory: 2048M
-path: target/demo-1.0-SNAPSHOT.jar
-buildpack: java_buildpack
+path: target/demo-micro-service-1.0-SNAPSHOT.jar
+buildpack: java_buildpack_offline
 env:
-    CF_TARGET: https://api.system.cftest.net
-    clientId : hiauwfhfi2398
-    clientKey : dfna8302n;fe;g-4208[qf
+    CF_TARGET: https://api.system.devpcf.com
 services:
 - nrap_bus_mq
-- eureka-for-int
+#- eureka-for-int
 - mysql-for-demo-application
 #    JAVA_OPTS: -agentlib:jdwp=transport=dt_socket,server=n,address=192.168.11.4:7600,suspend=y
 #    -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=16000
